# lb-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CLAUDE.md  Dockerfile  PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  pr-check.yml
alembic/: env.py
alembic/versions/: 24091545eac9_add_featured_file_id_to_user_locations_.py  30cc1d54bcee_generic_file_system_with_sti_and_join_.py  4c4cb6c093dc_add_smugmug_tables.py  509d6147e1a1_add_scripted_locations_tables.py  57cf0c3b7f79_add_user_folders_and_folder_id_to_user_.py  61718e3dc8b5_rename_username_to_email_and_add_.py  8ed504ac4775_remove_smugmug_nick_from_smugmug_.py  a1b2c3d4e5f6_add_project_location_files_and_featured.py  addde799e3ed_create_all_tables.py  ae051b5854bb_drop_production_tables.py  b1be66557dcb_remove_nickname_from_smugmug_accounts.py  b5bf6597608c_rename_locations_to_user_locations_and_.py  e2bc1cee1223_use_timezone_aware_timestamps_everywhere.py
app/: main.py
app/api/: deps.py
app/controllers/: episode.py  file.py  file_attachment.py  folder.py  user.py  (+12 more)
copilot/: .workspace
docs/: smugmug-sync.md
infra/: setup.sh
scripts/: create_user.py  export_openapi.py
tests/: conftest.py  test_auth.py  test_episodes.py  test_files.py  test_folders.py  test_health.py  test_location_files.py  test_locations.py  test_production_locations.py  test_production_members.py  test_productions.py  test_project_locations.py  test_project_members.py  test_projects.py  test_scoutings.py  test_scripted_locations.py  test_shares.py  test_tasks.py
(+72 files in other folders)
